--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "jeroennoten/laravel-adminlte": "^2.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "nwidart/laravel-modules": "^6.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -34,12 +35,14 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Modules\\": "Modules/"
         },
         "classmap": [
             "database/seeds",
             "database/factories"
         ]
+       
     },
     "autoload-dev": {
         "psr-4": {
